--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
               <li><a href="testimonials.html">Testimonials</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <!-- <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li> -->
                 </ul>
               </li>
             </ul>
@@ -87,8 +87,8 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="container">
-            <h2>We are professional</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h1>Application Innovation for Modern Business Transformation</h1>
+            <h2>Adapt and optimize your applications to meet evolving business needs</h2>
             <a href="about.html" class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
