--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="container">
-            <h1>Application Innovation for Modern Business Transformation</h1>
-            <h2>Adapt and optimize your applications to meet evolving business needs</h2>
+            <h2>Application Innovation for Modern Business Transformation</h2>
+            <p>Adapt and optimize your applications to meet evolving business needs</p>
             <a href="about.html" class="btn-get-started">Read More</a>
           </div>
         </div><!-- End Carousel Item -->
